# platform-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.production.yml  docker-compose.yml  generate-test-certs.sh  get-letsencrypt-dns.sh
bins/platform-api-server/: Cargo.toml
bins/platform-api-server/src/: main.rs  tls.rs
crates/api/: Cargo.toml
crates/api-core/src/: lib.rs  state.rs
crates/api/src/: background.rs  challenge_migrations.rs  job_distributor.rs  lib.rs  redis_client.rs  security.rs  state.rs
crates/api/src/challenge_runner/: challenge_ws.rs  cvm_manager.rs  migrations.rs  mod.rs
crates/api/src/handlers/: attestation.rs  challenge.rs  config.rs  emission.rs  job.rs  mod.rs
crates/api/src/middleware/: tls.rs
crates/api/src/models/: job_cache.rs  mod.rs
crates/api/src/orm_gateway/: mod.rs  permissions.rs  query_executor.rs  query_validator.rs
crates/api/src/routes/: artifacts.rs  attestation.rs  challenge_credentials.rs  challenge_proxy.rs  challenges.rs  config.rs  emissions.rs  health.rs  jobs.rs  metagraph.rs  mod.rs  nodes.rs  orm.rs  pools.rs  results.rs  ui.rs  websocket.rs
crates/api/src/routes/websocket/: auth.rs
crates/api/src/services/: bittensor.rs
crates/attestation/: Cargo.toml
crates/attestation/src/: config.rs  lib.rs  verifier.rs
crates/autoscaler/: Cargo.toml
crates/autoscaler/src/: lib.rs
crates/builder/: Cargo.toml
crates/builder/src/: lib.rs
crates/kbs/: Cargo.toml
crates/kbs/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: attestation.rs  challenge.rs  config.rs  emissions.rs  errors.rs  job.rs  lib.rs  pool.rs  vm_compose.rs
crates/routes/src/: config.rs
crates/routes/src/websocket/: auth.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: capacity.rs  lib.rs  scoring.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_create_challenge_tables.sql  002_add_challenge_network_fields.sql  003_add_dstack_image.sql  004_change_mechanism_id_to_u8.sql  006_add_job_progress_and_test_results.sql  012_add_os_image_hash_to_vm_compose_configs.sql
crates/storage/src/: artifacts.rs  config.rs  encryption.rs  lib.rs  postgres.rs
crates/storage/src/postgres/: challenges.rs  rows.rs
docs/: api-reference.md  architecture.md  getting-started.md  security.md
tests/: attestation_tests.rs  challenge_runner_tests.rs  job_distributor_tests.rs  orm_gateway_tests.rs  scheduler_tests.rs  security_tests.rs
tests/integration/: api_tests.rs  challenge_lifecycle_tests.rs  job_flow_tests.rs  mod.rs
tests/mocks/: mock_bittensor.rs  mock_tdx.rs  mock_vmm.rs  mod.rs
