[package]
name = "platform-api-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
platform-api-models = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Storage
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid"] }

# Cryptography
ring = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
hex = { workspace = true }

# Async trait
async-trait = "0.1"

# Random
rand = "0.8"

